k8s/prd/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-glpi
  namespace: dashboard-glpi
spec:
  selector:
    app: dashboard-glpi
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  type: ClusterIP
